--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Приложение 1</title>
 </head>
 <body>
-   <p> <b>HTML-документ</b> — <u>это обычный текстовый документ</u>, может быть создан как в обычном текстовом редакторе
+   <p><span style="background-color: orange;"> <b>HTML-документ</b> — <u>это обычный текстовый документ</u>, может быть создан как в обычном текстовом редакторе
     (Блокнот), так и в специализированном, с подсветкой кода (Notepad++, Visual Studio Code и т.п.). HTML-документ
-    имеет расширение .html.</p>
+    имеет расширение .html.</span></p>
    <p> <b>HTML-документ</b> состоит из дерева HTML-элементов и текста. Каждый элемент обозначается в исходном
     документе начальным (открывающим) и конечным (закрывающим) тегом (за редким исключением).</p>
-    <p> <b>Начальный тег показывает</b>, <u>где начинается элемент</u>, <b>конечный</b> — <u>где заканчивается</u>. Закрывающий тег образуется
+    <p><span style="color:blueviolet"> <b>Начальный тег показывает</b>, <u>где начинается элемент</u>, <b>конечный</b> — <u>где заканчивается</u>. Закрывающий тег образуется
         путем добавления слэша / перед именем тега: <i>&lt;имя тега&gt;...&lt;имя тега&gt;</i>. Между начальным и закрывающим тегами
-        находится содержимое элемента — контент.</p>
+        находится содержимое элемента — контент.</p></span>
         <p> Например: </p>
-       <p> 1.  &lt;p&gt; Контент &lt;p&gt; – Создаёт параграф </p>
-       <p> 2. &lt;b&gt; <b> Контент </b> &lt;b&gt; – Делает полужирное начертание </p>
-       <p> 3. &lt;i&gt; <i> Контент </i> &lt;i&gt; – Курсивное начертание </p>  
+       <p><span style="color:blue;"> 1.  &lt;p&gt; Контент &lt;/p&gt; – Создаёт параграф </span></p>
+       <p><span style="background-color: red;">2. &lt;b&gt; <b>Контент</b> &lt;/b&gt; – Делает полужирное начертание</span></p>
+       <p><span style="color:greenyellow"> 3. &lt;i&gt; <i> Контент </i> &lt;/i&gt; – Курсивное начертание</span></p>  
 
         <p>Мордвинцев Д.А. 07.02.2022</p>
 </body>
